--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,3 +2,253 @@ body{
   background-color: rgb(253, 255, 255);
 }
 
+
+.time-text{
+  padding-top:3px;
+}
+
+.row-footer{
+  color: rgb(158, 157, 157);
+}
+
+.footer-div{
+border-radius: 30px;
+justify-content: center;
+height: 24px;
+display:flex;
+}
+
+
+.ul-list{
+ position: relative;
+}
+
+.ul-list .ul-list-icon{
+position: absolute;
+top: 4px;
+left: 47px
+}
+
+
+/* for TOP nav form input with search icon */
+.search {
+  position: relative;
+}
+
+.search input {
+  height: 45px;
+  text-indent: 40px;
+  border: 2px solid #d6d4d4
+}
+
+
+.search .icon {
+  position: absolute;
+  top: 11px;
+  left: 20px
+}
+
+
+.nav-form-input{
+width: 676px !important;
+border: none !important;
+background-color: #ecf3fa;
+}
+
+/* end */
+
+ /* linkup logo */
+@media( max-width: 400px){
+  .logo{
+      width: 190px;
+      height: 40px;
+  }
+}
+
+
+/* card body main content */
+.card{
+background-color: white;
+border: none;
+}
+.card .card-header{
+/* background-color: #222 !important; */
+background-color: white;
+border: none;
+}
+/* end */
+
+
+/* side nav left and right */
+.sidebar-left{
+height: 100vh;
+position: fixed;
+top: 0;
+bottom: 0;
+z-index: 1;
+transition: 0.2s ease-in;
+visibility: visible;
+opacity: 1;
+}
+
+.class1{
+ visibility: hidden;
+ opacity: 0;
+ /* transform: scaleY(10); */
+ /* transform: scaleX(10); */
+ transform:rotateY(90deg);
+}
+
+@media(min-width:768px) {
+  .class1{
+    visibility: visible;
+    opacity: 1;
+    transform:rotateY(0deg);
+    transform: scaleX(1); 
+    transform: scaleY(1); 
+  }
+}
+
+@media(max-width:768px) {
+ .sidebar-left{
+   width: auto;
+ }
+}
+
+
+.sidebar-left a{
+ text-decoration: none;
+ font-size: 13px;
+ display: block;
+ transition: 0.3s;
+}
+
+
+.sidebar-right{
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  transition: 1s;
+}
+
+.main-view{
+padding: 10px;
+min-height: 100vh;
+}
+
+.main-view .content {
+margin-top: 54px;
+justify-content: center;
+padding: 2px;
+}
+
+
+/* Preview */
+.preview-list .preview-item {
+display: -webkit-flex;
+display: flex;
+-webkit-flex-direction: row;
+flex-direction: row;
+-webkit-align-items: flex-start;
+align-items: flex-start;
+padding: 1rem 0rem;
+font-size: .875rem; }
+.preview-list .preview-item:last-child {
+  border-bottom: 0; }
+.preview-list .preview-item .form-check {
+  margin-top: 8px;
+  margin-right: 1rem; }
+.preview-list .preview-item .preview-thumbnail {
+  color: #ffffff;
+  position: relative; }
+  .preview-list .preview-item .preview-thumbnail img,
+  .preview-list .preview-item .preview-thumbnail .preview-icon {
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-align-items: center;
+    align-items: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    }
+
+   .preview-list .preview-item .preview-thumbnail .status {
+     border: 3px solid rgb(92, 157, 255);
+     padding: 2px;
+   }
+
+   .preview-list .preview-item .preview-thumbnail .active{
+     height: 12px;
+     width: 12px;
+     background-color: rgb(99, 245, 94);
+     border-radius: 100%;
+     position: absolute;
+     top: 37px;
+     left: 34px;
+     border: 1px solid transparent;
+     padding: 1px;
+     box-shadow: 0px 0px 1px 1px rgb(109, 108, 108);
+   }
+
+    .preview-list .preview-item .preview-thumbnail img i,
+    .preview-list .preview-item .preview-thumbnail .preview-icon i {
+      font-size: 1.125rem;
+      margin: 0; }
+  .preview-list .preview-item .preview-thumbnail .badge {
+    border: 2px solid #ffffff;
+    border-radius: 100%;
+    bottom: 5px;
+    display: block;
+    height: 14px;
+    left: -5px;
+    padding: 0;
+    position: absolute;
+    width: 14px; }
+.preview-list .preview-item .preview-item-content {
+  line-height: 1;
+  padding-left: 15px; }
+  .preview-list .preview-item .preview-item-content:first-child {
+    padding-left: 0; }
+  .preview-list .preview-item .preview-item-content p {
+    margin-bottom: 10px;
+    line-height: 1; }
+    .preview-list .preview-item .preview-item-content p .content-category {
+      font-family: 'source-sans-pro-semibold', sans-serif;
+      padding-right: 15px;
+      border-right: 1px solid #2c2e33; }
+  .rtl .preview-list .preview-item .preview-item-content {
+    padding-left: 0;
+    padding-right: 1rem;
+    margin-right: 0;
+    margin-left: auto; }
+.preview-list .preview-item .preview-actions {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  flex-direction: row; }
+  .preview-list .preview-item .preview-actions i {
+    width: 29px;
+    color: #e6e9ed;
+    height: 29px;
+    border: 2px solid #e6e9ed;
+    border-radius: 100%;
+    padding: 3px 6px;
+    display: inline-block; }
+    .preview-list .preview-item .preview-actions i:first-child {
+      margin-right: 10px; }
+
+.preview-list.comment-preview .preview-item {
+padding: .87rem 0; }
+.preview-list.comment-preview .preview-item:first-child {
+  padding-top: 0; }
+.preview-list.comment-preview .preview-item p {
+  line-height: 27px; }
+
+.preview-list.bordered .preview-item {
+border-bottom: 1px solid #2c2e33; }
+.preview-list.bordered .preview-item:last-child {
+  border-bottom: 0; }
