--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,7 +5,11 @@ body{
 .nav-link{
   padding: 10px !important;
   margin: 2px !important;
-  /* background-color: white !important; */
+}
+
+li :hover{
+  color: rgb(144, 144, 238) !important;
+  transition: 0.7s;
 }
 
 
@@ -88,14 +92,30 @@ background-color: #ecf3fa;
  /* linkup logo */
 
  .logo{
-  width: 270px;
-  height: 50px;
+  width: 250px;
+  height: 60px;
 }
 
 @media( max-width: 400px){
   .logo{
       width: 190px;
       height: 40px;
+  }
+}
+
+.small-screen-logo{
+  display: none;
+}
+
+@media( max-width: 400px){
+  .small-screen-logo{
+    display: block;
+  }
+}
+@media( max-width: 991px){
+  .small-screen-logo{
+    display: block;
+    margin-right: auto;
   }
 }
 
@@ -121,7 +141,8 @@ border: none;
 
 
 /* side nav left and right */
-.sidebar-left{
+.sidebar-left{  
+margin-top: 16px;  
 min-height: 100vh;
 position: fixed;
 top: 0;
@@ -176,14 +197,15 @@ overflow-x: hidden;
 
 
 .sidebar-left a{
- /* text-decoration: none;
+ text-decoration: none;
  font-size: 13px;
  display: block;
- transition: 0.3s; */
+ transition: 0.3s;
 }
 
 
 .sidebar-right{
+  margin-top: 16px;
   height: 100vh;
   position: fixed;
   top: 0;
@@ -207,6 +229,28 @@ margin-top: 54px;
 justify-content: center !important;
 padding: 2px;
 }
+
+
+.btn-grad {background-image: linear-gradient(to right, #8e26f0 0%, #21abc4  51%, #4882a7  100%)}
+.btn-grad {
+   /* margin: 10px; */
+   padding: 10px;
+   text-align: center;
+   text-transform: uppercase;
+   transition: 0.5s;
+   background-size: 200% auto;
+   color: white;            
+   box-shadow: 0 0 20px #eee;
+   border-radius: 10px;
+   display: block;
+ }
+
+ .btn-grad:hover {
+   background-position: right center; /* change the direction of the change here */
+   color: #fff;
+   text-decoration: none;
+ }
+
 
 
 /* Preview */
@@ -241,8 +285,13 @@ font-size: .875rem; }
     }
 
    .preview-list .preview-item .preview-thumbnail .status {
-     border: 3px solid rgb(92, 157, 255);
+     border: 3px solid white;
+   }
+
+   .img-div{
+     background-image: linear-gradient(45deg, yellow , rgb(255, 1, 120));
      padding: 2px;
+     border-radius: 100%;
    }
 
    .preview-list .preview-item .preview-thumbnail .active{
@@ -251,7 +300,7 @@ font-size: .875rem; }
      background-color: rgb(99, 245, 94);
      border-radius: 100%;
      position: absolute;
-     top: 37px;
+     top: 40px;
      left: 34px;
      border: 1px solid transparent;
      padding: 1px;
