--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -85,6 +85,7 @@ left: 47px
 width: 676px !important;
 border: none !important;
 background-color: #ecf3fa;
+border-radius: 50px;
 }
 
 /* end */
@@ -157,7 +158,7 @@ opacity: 0;
 /* transform: rotateX(90deg); */
 /* transform: rotateY(90deg); */
 transform: rotateZ(90deg);
-overflow-x: hidden;
+/* overflow-x: hidden; */
 }
 
 .class1{
@@ -183,6 +184,7 @@ overflow-x: hidden;
     position: fixed;
     top: 0;
     bottom: 0;
+    left: 0;
     z-index: 1;
     transition: 0.2s ease-in;
     visibility: visible;
@@ -215,9 +217,11 @@ overflow-x: hidden;
   overflow-x: hidden;
 }
 
-.sidebar-right ul {
+
+
+/* .sidebar-right ul {
   box-shadow: 0px 1px 1px 0px #b7b8b9e0;
-}
+} */
 
 .main-view{
 padding: 10px;
@@ -251,7 +255,9 @@ padding: 2px;
    text-decoration: none;
  }
 
-
+ .preview-thumbnail{
+   position: relative;
+ }
 
 /* Preview */
 .preview-list .preview-item {
@@ -300,8 +306,8 @@ font-size: .875rem; }
      background-color: rgb(99, 245, 94);
      border-radius: 100%;
      position: absolute;
-     top: 40px;
-     left: 34px;
+     bottom: 0;
+     right: 0;
      border: 1px solid transparent;
      padding: 1px;
      box-shadow: 0px 0px 1px 1px rgb(109, 108, 108);
